Changing font size in input fields to 16px to avoid zooming in on mobiles.

--- a/src/css/styles1.css
+++ b/src/css/styles1.css
@@ -320,3 +320,7 @@ li {
     .page-header {
       margin-left: 15px;
     }
+
+    input {
+      font-size: 16px;
+    }
